# zera-microcontroller

./: CMakeLists.txt  README.md  ZeraMicroControllerConfig.cmake.in
zera-i2c/: CMakeLists.txt
zera-i2c/zera-i2c/: CMakeLists.txt  i2cutils.cpp  i2cutils.h
zera-i2c/zera-i2c-devices/: CMakeLists.txt
zera-i2c/zera-i2c-devices/lib/: CMakeLists.txt  F24LC256.cpp  F24LC256.h  F24LC256_p.cpp  F24LC256_p.h  eepromi2c_24lcxxx.cpp  eepromi2c_24lcxxx.h  eepromi2cdeviceinterface.h  i2caddressparameter.h  i2ceeprom_p.cpp  i2ceeprom_p.h  i2cflashinterface.h  i2cutils.cpp  i2cutils.h  protocol_zera_bootloader.h  protocol_zera_hard.h  singleonoffreferencemanager.h
zera-i2c/zera-i2c-devices/lib/mcontroller/: zera_mcontroller_errorflags.cpp  zeramcontrollerio.cpp  zeramcontrollerio.h  zeramcontrolleriotemplate.h
zera-i2c/zera-i2c-devices/lib/muxer/: i2cmultiplexerfactory.cpp  i2cmultiplexerfactory.h  i2cmuxerinterface.h  i2cmuxerpca9547.cpp  i2cmuxerpca9547.h
zera-i2c/zera-i2c-devices/testlib/: CMakeLists.txt
zera-i2c/zera-i2c-devices/tests/: CMakeLists.txt
zera-i2c/zera-i2c-ping/: CMakeLists.txt
zera-i2c/zera-mcontroller-io/: main.cpp
zera-i2c/zera-mcontroller-io/i2c-accu-commands/: example.md
zera-intel-hex/lib/: CMakeLists.txt
